--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
 	
 	<style>
 	body {
-		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-	}
-	
-	.collapse.in {
-		height: auto;
-		overflow: visible !important;
+		padding-top: 60px;
 	}
 	
 	</style>
