--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	body {
 		padding-top: 60px;
 	}
-	
+	.grid {
+		cursor:pointer;	
+	}
 	</style>
 	
 	
@@ -75,7 +77,7 @@
 			<div class="tab-pane active" id="tu_fp_home_content" style="width:100%">
 				<div style="width:80%;float:left">
 					<div>
-						<ul class="nav nav-pills">
+						<ul class="nav nav-pills" id="myTab">
 							<li><a href="#day" data-toggle="tab">Day</a></li>
 							<li><a href="#week" data-toggle="tab">Week</a></li>
 							<li class="active"><a href="#month" data-toggle="tab">Month</a></li>
@@ -89,7 +91,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -102,7 +104,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -115,7 +117,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -128,7 +130,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -141,7 +143,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -154,7 +156,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -167,7 +169,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -183,7 +185,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -196,7 +198,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -209,7 +211,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -222,7 +224,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -235,7 +237,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -248,7 +250,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -261,7 +263,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -277,7 +279,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -290,7 +292,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -303,7 +305,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -316,7 +318,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -329,7 +331,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -342,7 +344,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -355,7 +357,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -371,7 +373,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -384,7 +386,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -397,7 +399,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -410,7 +412,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -423,7 +425,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -436,7 +438,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -449,7 +451,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -465,7 +467,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -478,7 +480,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -491,7 +493,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2" style="margin:5px;width:12.7%">
+										<div class="span2 grid" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
