--- a/index.html
+++ b/index.html
@@ -629,78 +629,185 @@
 								<tr>
 									<td>08:00</td>
 									<td class="show-grid" style="padding:0px">
-										<div class="span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left">
-											     +    -150 &euro;, Toner Rainbow Kit for Samsung CLX-3175 Printer  
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;" >
+										<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+										</div>
+										<div>
+											         -150 &euro;, Toner Rainbow Kit for Samsung CLX-3175 Printer  
+										</div>
 										</div>
 									</td>
 								</tr>
 								<tr>
 									<td>08:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>09:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>09:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>10:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>10:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>11:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>11:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>12:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>12:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 									<tr>
 									<td>13:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>13:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>14:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>14:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>15:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>15:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>16:00</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 								<tr>
 									<td>16:30</td>
-									<td> </td>
+									<td class="show-grid" style="padding:0px"> 
+										<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+												<div class="addButtonContainer" style="width:10%;float:left">
+												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+												</div>
+										</div>
+									</td>
 								</tr>
 							</tbody>
 						</table>
@@ -805,6 +912,7 @@
 		
 			<div class="tab-pane" id="tu_fp_preferences_content">
 				<h2 id="tu_fp_preferences_content_header">Preferences</h2>
+								
 					<form class="form-inline" >
 						<legend>Defaultview</legend>
 							<div class="control-group">
@@ -897,7 +1005,7 @@
 						</label>
 
 						<div class = "control-group">
-							<label class = "control-label" for = "MonthPeriod" > Default period: </label>
+							<label class = "control-label" for = "MonthPeriod" > Default period: </label>	
 							<div class="controls">
 								<label class="radio inline control-label" tabindex="10" accesskey="d">
 									<input type="radio" name = "view" id="MonthPeriod" value="monthp"> Month
@@ -908,7 +1016,7 @@
 								<label class="radio inline control-label" tabindex="12" accesskey="m">
 									<input type="radio" name = "view" id="YearPeriod" value="yearp"> Year
 								</label>
-							</div>	
+							</div>						
 						</div>
 			
 						<div class="form-actions">
@@ -1085,6 +1193,8 @@
 				</div>
 			</div>
 		</div>
+		
+
 	
 	<!-- BEGIN OF MODAL DIALOG -->
 		<div id="newRecord" class="modal hide fade">
@@ -1287,6 +1397,8 @@
 	
 	<script type="text/javascript" src="js/tu_fp/tu_fp.js"></script>
 <! -- End Bootstrap JS-->
+
+
 
 </body>
 </html>
