Fixed bug of shifting plus sign when screen resolution is low

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 	.grid {
 		cursor:pointer;	
 	}
+	.addButtonContainer {
+		max-height: 40px;
+	}
 	</style>
 	
 	
@@ -45,7 +48,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div style="width:100%">
 			<div class="navbar-inner">
-				<div class="container" style="width:80%">
+				<div class="container" id="wrapper">
 					<a class="tufinancebrand" href="index.html">TU Finance Planner</a>
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 						<span class="icon-bar"></span>
