--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 	.addButtonContainer {
 		max-height: 40px;
 	}
+	.modal-body {
+		max-height: 400px;
+	}
 	</style>
 	
 	
@@ -48,7 +51,7 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div style="width:100%">
 			<div class="navbar-inner">
-				<div class="container" id="wrapper">
+				<div class="container">
 					<a class="tufinancebrand" href="index.html">TU Finance Planner</a>
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 						<span class="icon-bar"></span>
@@ -74,7 +77,7 @@
 		</div>
 	</div>
 
-	<div class="container" style="width:80%">
+	<div class="container" id="wrapper">
 		<div style="width:100%">
 		<div class="container tab-content" id="tu_fp_global_container" style="float:left;width:80%">
 			<div class="tab-pane active" id="tu_fp_home_content" style="width:100%">
