Small design improvements

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 	.modal-body {
 		max-height: 400px;
 	}
+	.grid {
+		height: 90px;
+		width: 95px;
+		float: none;
+	}
+
 	</style>
 	
 	
@@ -1035,7 +1041,15 @@
 			</div>
 	
 		</div>
-	
+		
+		<div class="container" style="width:8%;float:left">
+			<div class="spacer100 akkupositivspace">
+				<div class="spacer100 akkupositiv" hidden><p class="akkuvalue">800&euro;</p></div>
+			</div>
+			<div class="spacer100 akkuline" style="margin:0 auto;float:none"></div>
+			<div class="spacer100 akkunegativ" hidden><p class="akkuvalue">800&euro;</p></div>
+		</div>
+		
 		<div class="container" id="tu_fp_search_content" style="width:80%; display:none; float:left">
 			<div style="width:100%;float:left">
 				<h2 id="tu_fp_search_content_term">Search results:</h2>
@@ -1315,14 +1329,6 @@
 			</div>
 		</div>
 		<!-- END OF MODAL DIALOG -->
-
-		<div class="container pull-right" style="width:8%">
-			<div class="spacer100 akkupositivspace">
-				<div class="spacer100 akkupositiv" hidden><p class="akkuvalue">800&euro;</p></div>
-			</div>
-			<div class="spacer100 akkuline" style="margin:0 auto;float:none"></div>
-			<div class="spacer100 akkunegativ" hidden><p class="akkuvalue">800&euro;</p></div>
-		</div>
 	</div>
 </div>
 
