--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" id="monthButton1" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -111,7 +111,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -124,7 +124,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -137,7 +137,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -150,7 +150,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -163,7 +163,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -176,7 +176,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -192,7 +192,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -205,7 +205,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -218,7 +218,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -231,7 +231,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -244,7 +244,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -257,7 +257,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -270,7 +270,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -286,7 +286,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -299,7 +299,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -312,7 +312,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -325,7 +325,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -338,7 +338,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -351,7 +351,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -364,7 +364,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -380,7 +380,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -393,7 +393,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -406,7 +406,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -419,7 +419,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -432,7 +432,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -445,7 +445,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -458,7 +458,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -474,7 +474,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -487,7 +487,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -500,7 +500,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -878,38 +878,43 @@
 						</div>
 					</form>
 					<div class="container">
-						<div class="control-group">
-							<label class="control-label" for="category">Category:</label>
-							<div class="controls">
-								<select name="category" id="chooseable" style="float:left">
-									<option>All</option>
+						<form class="form-horizontal" style="margin:0px">
+							<div class="control-group" style="margin:10px 0px 0px 0px">
+								<label class="control-label" for="category-chooser" style="width:80px">Category:&nbsp;</label>
+								<select name="category" id="category-chooser">
+									<option selected>[All]</option>
 									<option>Income</option>
-									<option>Rent</option>
 									<option>Car</option>
+									<option>Common</option>
 									<option>Energy</option>
 									<option>Insurances</option>
+									<option>Rent</option>
 								</select>
 							</div>
-						</div>
+						</form>
 						<div class="container pull-left">
-							<img src="img/tu_fp/week_view_graph.png" style="padding:0px 0px" />
+							<img id="statistics-image" src="img/tu_fp/evaluation/statistics-all.png" style="padding:0px 0px" />
 						</div>
 					</div>
 					<div class="container" style="padding:50px 0px">
-					<div style="float:left;background-color:#000000;width:3px;height:430px;margin:0;padding:0"></div>
 					<div style="width:90%;float:left;margin:0;padding:0">
-						<div class="span2" style="width:100%;height:430px;margin:0;padding:0">
+						<div style="float:left;height:430px;margin:0;padding:0;background-color:#000000">
+							<img src="img/tu_fp/evaluation/bardiagram-left.png" style="float:left;height:430px;margin:0;padding:0" />
+						</div>
+						<div class="span2" style="width:90%;height:430px;margin:0;padding:0">
 							<div class="statisticsspace">
-								<div class="statisticsbarup" style="background-color:#aaaaee;height:100px;left:10px" hidden>Income</div>
+								<div class="statisticsbarup" style="background-color:#aaaaee;height:180px;left:10px" hidden>Income</div>
 								<div class="statisticsbarup" style="background-color:#ffaaaa;height:30px;left:310px" hidden>Insurances
-									<div class="statisticsbarup" style="background-color:#ffff66;height:10px" hidden></div>
+									<div class="statisticsbarup" style="background-color:#2173fa;height:10px" hidden></div>
 								</div>
 							</div>
-							<div style="background-color:#000000;width:100%;height:3px"></div>
+							<div style="background-color:#000000;width:80%;height:3px"></div>
 							<div class="statisticsspace">
-								<div class="statisticsbardown" style="background-color:#99ff99;height:90px;left:110px" hidden>Rent</div>
-								<div class="statisticsbardown" style="background-color:#99eeee;height:170px;left:210px" hidden>Car</div>
-								<div class="statisticsbardown" style="background-color:#ff9999;height:20px;left:310px" hidden></div>
+								<div class="statisticsbardown" style="background-color:#99ff99;height:30px;left:110px" hidden>Rent</div>
+								<div class="statisticsbardown" style="background-color:#99eeee;height:15px;left:210px" hidden>Car</div>
+								<div class="statisticsbardown" style="background-color:#ff9999;height:18px;left:310px" hidden></div>
+								<div class="statisticsbardown" style="background-color:#924083;height:60px;left:410px" hidden>Common</div>
+								<div class="statisticsbardown" style="background-color:#f7f945;height:17px;left:510px" hidden>Energy</div>
 							</div>
 						</div>
 					</div>
