current month is now yellow

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" id="monthButton1" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" id="monthbutton1" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -117,7 +117,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -130,7 +130,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -143,7 +143,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -156,7 +156,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -169,7 +169,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -182,7 +182,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -198,7 +198,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -211,7 +211,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -224,7 +224,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -237,7 +237,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -250,7 +250,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -263,7 +263,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -276,7 +276,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -292,7 +292,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -305,7 +305,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -318,7 +318,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -331,7 +331,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -344,7 +344,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -357,7 +357,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -370,7 +370,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -386,7 +386,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -399,7 +399,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%;background-color: #f6fa7f;">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -412,7 +412,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -425,7 +425,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -438,7 +438,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -451,7 +451,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -464,7 +464,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -480,7 +480,7 @@
 							<div class="row" style="margin:0px">
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -493,7 +493,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
@@ -506,7 +506,7 @@
 								</div>
 								<div>
 									<div class="show-grid" style="margin:0px">
-										<div class="span2 grid monthButton" style="margin:5px;width:12.7%">
+										<div class="span2 grid monthbutton" style="margin:5px;width:12.7%">
 											<div class="addButtonContainer" style="width:50%;float:left">
 												<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
 											</div>
