current-money-status

--- a/index.html
+++ b/index.html
@@ -2046,11 +2046,14 @@
 			</div>
 		</div>
 		
-		<div class="container" style="width:8%;float:left">
-			<div class="spacer100 akkupositivspace">
-				<div class="spacer100 akkupositiv" hidden><p class="akkuvalue">800&euro;</p></div>
+		<div class="container" style="width:15%;float:left;position:relative">
+			<div class="spacer100 akkupositivspace" style="width:100%">
+				<div class="spacer100 akkupositivspace" style="position:absolute;bottom:0;height:50%">
+					<p style="position:absolute;bottom:70%;text-align:center"><b>current money status</b></p>
+					<div class="spacer100 akkupositiv" style="height:70%;width:50%;left:15%" hidden><p class="akkuvalue">800&euro;</p></div>
+				</div>
 			</div>
-			<div class="spacer100 akkuline" style="margin:0 auto;float:none"></div>
+			<div class="spacer100 akkuline" style="position:absolute;margin:0 auto;float:none; left: 5%"></div>
 			<div class="spacer100 akkunegativ" hidden><p class="akkuvalue">800&euro;</p></div>
 		</div>
 		
