money-values in month-view

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 											<div style="width:50%;float:left">
 												1
 											</div>
-											<p class="money">&euro;500</p>
+											<p class="money firstday">&euro;500</p>
 										</div>
 									</div>
 								</div>
